Complete forgot password

--- a/Views/Authentication/Signin.cshtml
+++ b/Views/Authentication/Signin.cshtml
@@ -53,7 +53,7 @@
 									<span class="checkmark"></span>
 								</label>
 							</div>
-							<div class="float-end"><a id="forgot" href="javascript:void(0);">Lost Password?</a></div>
+							<div class="float-end"><a id="forgot" asp-action="ForgotPassword" asp-controller="Authentication">Lost Password?</a></div>
 						</div>
 						<div class="text-muted text-center mb-2">Don't have an Account? <a asp-controller="authentication" asp-action="register">Sign up</a></div>
 						<div class="text-center"><input type="submit" value="Log In" class="btn_1 full-width"></div>
