--- a/Views/Home/Checkout.cshtml
+++ b/Views/Home/Checkout.cshtml
@@ -11,10 +11,12 @@
 
 @section Styles {
     <link rel="stylesheet" href="~/admin/js/plugins/select2/css/select2.min.css">
+    <link rel="stylesheet" href="~/admin/js/plugins/sweetalert2/sweetalert2.min.css">
 }
 
 @section Scripts {
     <script src="~/admin/js/plugins/select2/js/select2.full.min.js"></script>
+    <script src="~/admin/js/plugins/sweetalert2/sweetalert2.min.js"></script>
     <script src="~/admin/js/plugins/bootstrap-notify/bootstrap-notify.min.js"></script>
     <script src="~/admin/js/plugins/jquery-validation/jquery.validate.min.js"></script>
     <script src="~/admin/js/plugins/jquery-validation/additional-methods.js"></script>
@@ -68,7 +70,7 @@
                                 </div>
                                 <div class="col-6">
                                     <label class="form-label" for="checkout-phone">Phone</label>
-                                    <input type="text" class="form-control form-control-alt" id="checkout-phone" name="checkout-phone">
+                                    <input type="number" class="form-control form-control-alt" id="checkout-phone" name="checkout-phone">
                                 </div>
                             </div>
                             <div class="mb-4">
