--- a/Views/Product/Detail.cshtml
+++ b/Views/Product/Detail.cshtml
@@ -61,7 +61,7 @@
 	                            <label class="col-xl-5 col-lg-5  col-md-6 col-6"><strong>Quantity</strong></label>
 	                            <div class="col-xl-4 col-lg-5 col-md-6 col-6">
 	                                <div class="numbers-row">
-	                                    <input type="number" value="1" id="quantity_1" class="qty2" name="quantity_1">
+									<input type="number" value="1" id="quantity_1" class="qty2" name="quantity_1" min="1">
 	                                </div>
 	                            </div>
 	                        </div>
